[package]
name = "input-log-viewer"
version = "0.1.0"
edition = "2024"
description = "A lightweight input log viewer for game developers"
license = "MIT"

[dependencies]
# GUI
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# File dialog
rfd = "0.16.0"

# Error handling
thiserror = "2.0.17"

[profile.release]
opt-level = 3
lto = true
